[MODIFIED] Design of all brands changed

--- a/views/brand/ammann.html
+++ b/views/brand/ammann.html
@@ -12,8 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/ammann.png' link='http://www.ammann-group.com/en/home/compaction/'></img>
-		<span> - Outros modelos disponíveis</span>
-	<div>
+	</div>
 	<p/>
 
 	<ul id='slideMaq'>
@@ -42,6 +41,9 @@
 			<span>ASC 120/150</span>
 		</li>
 	</ul>
+	<p/>
+	<span class='ltb' link='http://www.ammann-group.com/en/home/compaction/' >Outros modelos disponíveis</span>
+	
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
