--- a/views/brand/fassi.html
+++ b/views/brand/fassi.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/fassi.png' link='http://www.fassi.com/'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -30,6 +29,9 @@
 			<span>F 385</span>
 		</li>
 	</ul>
+
+	<p/>
+	<span class='ltb' link='http://www.fassi.com/' >Outros modelos disponíveis</span>
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
