--- a/views/brand/jungheinrich.html
+++ b/views/brand/jungheinrich.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/jungheinrich.png' link='http://www.jungheinrich.com/'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -34,6 +33,9 @@
 			<span>AM 22</span>
 		</li>
 	</ul>
+
+	<p/>
+	<span class='ltb' link='http://www.jungheinrich.com/' >Outros modelos disponíveis</span>
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
