--- a/views/brand/kalmar.html
+++ b/views/brand/kalmar.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/kalmar.png' link='http://www.kalmarglobal.com/'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -30,6 +29,9 @@
 			<span>DRT 450</span>
 		</li>
 	</ul>
+
+	<p/>
+	<span class='ltb' link='http://www.kalmarglobal.com/' >Outros modelos disponíveis</span>
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
