--- a/views/brand/manitou.html
+++ b/views/brand/manitou.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/manitou.png' link='http://www.pt.manitou.com/manitou/pt/market/3-industry'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -42,6 +41,9 @@
 			<span>120 SE</span>
 		</li>
 	</ul>
+	<p/>
+	<span class='ltb' link='http://www.pt.manitou.com/manitou/pt/market/3-industry' >Outros modelos disponíveis</span>
+	
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
