--- a/views/brand/mustang.html
+++ b/views/brand/mustang.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/Home.aspx'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -26,6 +25,8 @@
 			<span>Skid Steer Loader 2056</span>
 		</li>
 	</ul>
+	<p/>
+	<span class='ltb' link='http://www.mustangmfg.com/Home.aspx' >Outros modelos disponíveis</span>
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
