--- a/views/brand/sillaitaly.html
+++ b/views/brand/sillaitaly.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/sillaitaly.png' link='http://www.sillaitaly.com/'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -26,6 +25,9 @@
 			<span>DB 4000</span>
 		</li>
 	</ul>
+	<p/>
+	<span class='ltb' link='http://www.sillaitaly.com/' >Outros modelos disponíveis</span>
+
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
