--- a/views/brand/bell.html
+++ b/views/brand/bell.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/bell.png' link='http://www.bellequipment.com'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -34,6 +33,9 @@
 			<span>670 G/672 G</span>
 		</li>
 	</ul>
+
+	<p/>
+	<span class='ltb' link='http://www.bellequipment.com' >Outros modelos disponíveis</span>
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
