--- a/views/brand/compair.html
+++ b/views/brand/compair.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/compair.png' link='http://www.compair.pt/'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -26,6 +25,10 @@
 			<span>C 125</span>
 		</li>
 	</ul>
+
+	<p/>
+	<span class='ltb' link='http://www.compair.pt/' >Outros modelos disponíveis</span>
+	
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
