--- a/views/brand/galtrailer.html
+++ b/views/brand/galtrailer.html
@@ -12,7 +12,6 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/galtrailer.png' link='http://www.pt.manitou.com/manitou/pt/market/3-industry'></img>
-		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
@@ -26,6 +25,9 @@
 			<span>Porta Máquinas 3 eixos</span>
 		</li>
 	</ul>
+
+	<p/>
+	<span class='ltb' link='http://www.pt.manitou.com/manitou/pt/market/3-industry' >Outros modelos disponíveis</span>
 	<script type="text/javascript">
 
 		$('#slideMaq').hide();
