--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -76,9 +76,9 @@ img#comp{
 }
 #cssmenu > ul > li > a {
   color: #000000;
-  font-family: Verdana, 'Lucida Grande';
+  font-family: Trebuchet ms;
   font-weight: bolder;
-  font-size: 15px;
+  font-size: 17px;
   line-height: 70px;
   padding: 15px 20px;
   -webkit-transition: color .15s;
@@ -235,7 +235,11 @@ section#body{
 
 .ltb{
   cursor: pointer;
-  color:#999999;
+  color:#5B5B5B;
+}
+
+.ltb:hover{
+  color:#888888;
 }
 h1 > span:hover{
   color:#000000;
