--- a/public/css/marca.css
+++ b/public/css/marca.css
@@ -14,6 +14,12 @@
 	display: block;
 }*/
 
+section#body > span{
+	font-family: trebuchet ms;
+	font-size: 14px;
+	top:15px;
+}
+
 ul#slideMaq > li > span{
 	display: block;
 	font-family: sans-serif;
