[MODIFIED] news show as a slider, using lightSlider library

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,13 +1,29 @@
 <html>
 	<head>
 		@{head('<script src="js/slider.js"></script>')}
+		@{head('<script src="js/lib/jquery.lightSlider.js"></script>')}
+		@{head('<link type="text/css" rel="stylesheet" href="css/lib/lightSlider.css" />')}
 		@{head('<link rel="stylesheet" href="css/main.css"/>')}
+		@{head('<script type="text/javascript">
+			$(document).ready(function() {
+    
+    			$(".frontNews").lightSlider({
+					gallery: false,
+	    			item: 1,
+	    			loop:true,
+	    			slideMargin: 0,
+	    			thumbItem: 9
+    			});
+			});
+		</script>')}
+
 	</head>
 	<body>
-
-		<ul class="frontNews">
-			@{template('frontNews',model)}
-		</ul>
+		<div>
+			<ul class="frontNews">
+				@{template('frontNews',model)}
+			</ul>
+		</div>
 
 	</body>    
 </html>
