--- a/views/newsForm.html
+++ b/views/newsForm.html
@@ -7,20 +7,20 @@
 			<form action='news' method='POST'>
 				<textarea col='40' rows='10' id='newsText' name='text' maxlength="1000" autofocus></textarea>
 				<br/>
-				<input type="radio" class="newsFormRadio" name="banner" id="ex1" value="img/news/banner1" checked />
+				<input type="radio" class="newsFormRadio" name="banner" id="ex1" value="img/news/banner1.jpg" checked />
     			<label for="banner1" class="label">Maquinas Novas</label>
     			<br/>
-    			<input type="radio" class="newsFormRadio" name="banner" id="ex2" value="img/news/banner2"/>
+    			<input type="radio" class="newsFormRadio" name="banner" id="ex2" value="img/news/banner2.jpg"/>
     			<label for="banner2" class="label">Apoio ao cliente</label>
     			<br/>
-    			<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner3"/>
+    			<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner3.jpg"/>
     			<label for="banner3" class="label">Conferencias</label>
 				<br/>
-				<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner4"/>
-    			<label for="banner3" class="label">Peças</label>
+				<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner4.jpg"/>
+    			<label for="banner4" class="label">Peças</label>
 				<br/>
-				<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner5"/>
-    			<label for="banner3" class="label">Ligações</label>
+				<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner5.jpg"/>
+    			<label for="banner5" class="label">Ligações</label>
 				<br/>
 				<input type ='submit' id='submit'/>
 				<button type='button' id='preview'>Prever</button>
