[MODIFIED] Translations for aluguer, pecas, assistencia texts

--- a/views/aluguer.html
+++ b/views/aluguer.html
@@ -21,14 +21,31 @@
 					<li>Mini Carregadora de Rodas</li>
 					<li>...Entre outros</li>
 				</ul>
-				<p/>
+				<br/>
 				Consulte-nos:   +244 924 198 989 - carlos.santos@maqman.net
 			</div>
 			<div class='separator'></div>
 			<div id='right'>
 				<h3>English</h3>
 				<p>
-				MAQMAN sells a variety of machinery for Construction and Cargo handling equipment. We are continuously receiving machinery, equipment's and accessories from the different manufacturers and rotating our new machinery stock.
+				MAQMAN – RENT AND SOLVE YOUR PROBLEMS
+				</p>
+				<p>
+				We advise and integrate solutions for your project. The equipments are rented with guaranteed and specialized maintenance,… always running
+				<br/>
+				<ul>
+					<caption>The choice belongs to you:</caption>
+					<li>Masted Forklift Truck, diesel engine</li>
+					<li>Masted Forklift Truck, electric engine</li>
+					<li>Electrical Hand Pallet</li>
+					<li>Compact Telehandler </li>
+					<li>Aerial Work Platform, scissors, articulated or vertical mast types</li>
+					<li>Skid Steer</li>
+					<li>… and much more</li>
+				</ul>
+				<br/>
+				Call us: +244 924 198 989 – carlos.santos@maqman.net
+
 				</p>
 			</div>
 		</div>
