--- a/views/assistencia.html
+++ b/views/assistencia.html
@@ -19,9 +19,10 @@
 			<div id='right'>
 				<h3>English</h3>
 				<p>
-				We are a team of specialized technicals.<br>
-				We move our workshop to your machine.<br>
-				We garantee the best attention over your machine's health.<br> We give you a bigger working time to use more and better your machine.
+				We have a specialized technicans team<br/>
+				We move our workshop to be side by side with your machine<br/>
+				We garantee the best attention over your machine health<br/> We offer you a long work periods to use more and better your machine<br/>
+				Call us: +244 939 170 844 – assistencia.tecnica@maqman.net
 				</p>
 			</div>
 		</div>
