--- a/views/pecas.html
+++ b/views/pecas.html
@@ -25,7 +25,20 @@
 			<div id='right'>
 				<h3>English</h3>
 				<p>
-				MAQMAN sells a variety of machinery for Construction and Cargo handling equipment. We are continuously receiving machinery, equipment's and accessories from the different manufacturers and rotating our new machinery stock.
+				Maqman sells parts for your equipments.
+				<br/><br/>
+				The Parts’s facilities are side by side to the workshop, have specialized team helps you to find the correct part you need.
+				<br/><br/>
+				An electronic payment terminal is free for use in our shop.
+				<br/><br/>
+				You can call us, directly: 922 080 593
+				<br/><br/>
+				But if you prefer, seated in the commodity of your desk, email us your request to pecas@maqman.net . Join all the information you can collect.
+				<br/><br/>
+				Use the manufacture part number reference impressed on the old part or pick up the information from the spare parts catalogue
+				<br/>
+				If you don’t have de part number reference, remind to attach the machine serial number.
+
 				</p>
 			</div>
 		</div>
