--- a/views/quemsomos.html
+++ b/views/quemsomos.html
@@ -21,7 +21,7 @@
 				MAQMAN is an Angolan company, founded on October 2010, having a form of Commercial Society by shares with limited liability. 
 				</p>
 				<p>
-				Our MISSION is provide solutions for the handling of loads and people to support industrial activities, with a special focus in the areas of Distribution, Construction and Public/Estate works, adding quality, warranty and value to the projects.
+				Our MISSION is to provide solutions for cargo handling, using industrial equipments, with a special focus in the Distribution, Construction and Public/Estate works areas, adding quality, warranty and value to the projects.
 				</p>
 
 			</div>
