[ADD|MODIFIED] added a new machine and a way to show that a machine is out of line and new. Made a news have \n and fit in a reserved space.

--- a/public/css/lib/flexisel.css
+++ b/public/css/lib/flexisel.css
@@ -46,7 +46,7 @@ display:none;
     position:relative;
     line-height:0px;
 }
-.nbs-flexisel-item img {
+.nbs-flexisel-item img.machine {
     cursor: pointer;
     position: relative;
     margin-top: 10px;
