--- a/templates/frontNews.html
+++ b/templates/frontNews.html
@@ -1,1 +1,1 @@
-<li><div><span>{html}</span><img src={link}></img></div></li>
+<li><div><p class="newsText">{html}</p><img src={link}></img></div></li>
