--- a/views/_layout.html
+++ b/views/_layout.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="/css/lib/flexisel.css"/>
 	<link rel="stylesheet" href="/css/lib/flexiselModified.css"/>
 	<script type='text/javascript'src="/js/lib/jquery.flexisel.js"></script>
+	<script type='text/javascript'src="/js/imagesStatus.js"></script>
     
     @{head}
 
@@ -61,7 +62,6 @@
 		</ul>
 
 	<script type="text/javascript">
-
 		$(window).on("load",function(){
 			$('#partners').flexisel({
 				css: "flexiselM",
