[ADD] added EJC-216 machine and it images

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -80,7 +80,7 @@
 		@{endif}
 		<nav>
 			<a href='/'>
-			<img id='comp' src="/img/partners/maqman.png"></img>
+			<img id='comp' src="/img/partners/maqman2.png"></img>
 			</a>
 			<div id='cssmenu'>
 				<ul>
