[MODIFIED] new status removed from a machine

--- a/views/brand/jungheinrich.html
+++ b/views/brand/jungheinrich.html
@@ -32,7 +32,7 @@
 			<img class='machine' src='/img/machines/AM-22-small.png'/>
 			<span>AM 22</span>
 		</li>
-		<li class ='ltp' link='/maquina/EJC-216' status=new>
+		<li class ='ltp' link='/maquina/EJC-216'>
 			<img class='machine' src='/img/machines/EJC-216-small.png'/>
 			<span>EJC 216/220</span>
 		</li>
